--- a/website/newsletter/141/index.mdx
+++ b/website/newsletter/141/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /141
-title: "This Week In React #141: ..."
+title: "This Week In React #141: 20.000 subscribers 🥳, Next.js, Storybook, React Visualized, Remix, Chakra, Modern.js, Reselect, React-Native Benchmarks, Expo..."
 authors: [slorber]
 date: 04-11-2023
 image: /img/TWIR_POST.png
@@ -9,7 +9,15 @@ unlisted: true
 
 Hi everyone!
 
-<Todo />
+We just passed a milestone: you are now **over 20,000 subscribers**! 🥳️
+
+Thanks to all of you for giving me your attention every week and for helping me grow this project! If you want to give me a hand: **word-of-mouth** works well. I'm setting up a **referral program** that will soon allow me to know my best ambassadors, and to thank or reward them.
+
+Having a critical mass of readers is important: it allows to find [sponsors](https://thisweekinreact.com/sponsor) and compensate for the fact that I spend 50% of my time on it. After 3 years of effort, I've finally reached sustainability: it will give me the freedom to test new ideas without taking too many risks.
+
+Otherwise, this week is marked by the release of Next.js 13.3 and Storybook 7.0. React Visualized is a very nice resource for beginners. I discovered Modern.js. Some good articles about React, Remix and Chakra UI. Calm on React-Native side.
+
+For React-Native developers, don't miss the [App.js](https://appjs.co/) conference in Krakow on May 10-12. It was a [very good experience](https://twitter.com/sebastienlorber/status/1536636851230060544) for me last year 👌. They offer us [-20% on workshops](https://ti.to/appjs/2023/discount/ThisWeekinReact20).
 
 <!-- truncate -->
 
@@ -41,7 +49,51 @@ React-admin has been actively **maintained for 5 years**, and has already convin
 
 ## ⚛️ React {#react}
 
-{" "}
+[![Next.js 13.3](/emails/issues/141/nextjs13.3.jpg)](https://nextjs.org/blog/next-13-3)
+
+**[Next.js 13.3](https://nextjs.org/blog/next-13-3)**
+
+Some very nice new features in this new Next.js release. The new App Router will soon be considered as stable.
+
+- File-Based Metadata API: new file system conventions to generate sitemaps, robots, favicons... See also this [visual thread](https://twitter.com/delba_oliveira/status/1645840553597362176).
+- Dynamic Open Graph Images: integration of `@vercel/og` and Satori directly in Next.js to generate social cards via JSX and CSS/Tailwind.
+- Static Export: Next.js can run Server Components at build time and produce a static export of your app that does not require a server runtime.
+- Parallel Routes: the layout component can define multiple slots that will be filled by different pages.
+- Interception Routes: allows to implement "Instagram" type routing patterns, a photo can be opened in a modal or in full screen depending on where you come from.
+- Many other improvements.
+
+---
+
+[![React, Visualized](/emails/issues/141/visualized.jpg)](https://react.gg/visualized)
+
+**[React, Visualized](https://react.gg/visualized)**
+
+A very nice visual and interactive resource to discover React. To share with beginner React devs within your team.
+
+---
+
+- 👀 [Modern.js](https://modernjs.dev/en): ByteDance devs don't only offer rspack, but also a complete React meta-framework, and a whole ecosystem of tools. Keep an eye on this!
+- 👀 [Next.js RFC - `next/third-parties`](https://github.com/vercel/next.js/discussions/48256): the goal is to create wrappers on top of `next/script` to facilitate the integration of popular libraries like Google Analytics.
+- 👀 [Next.js PR - Add Zod and router state validation](https://github.com/vercel/next.js/pull/46962)
+- 👀 [Reselect PR - Add experimental new memoizers: autotrack, weakmap, and signalis](https://github.com/reduxjs/reselect/pull/605)
+- 📜 [Storybook 7.0](https://storybook.js.org/blog/storybook-7-0/): the blog post has just been published! Big release that we already talked about several times.
+- 📜 [The future of Chakra UI](https://www.adebayosegun.com/blog/the-future-of-chakra-ui): Chakra UI wants to switch to zero-runtime CSS-in-JS to be compatible with Server Components. Aims to be a universal library with a good DX. They are creating Panda for CSS-in-JS, and Ark to help with the integration of agnostic Zag.js state machines.
+- 📜 [Fighting inter-component HTML bloat](https://elisehe.in/2023/03/27/minimal-html-in-design-systems.html): a good article that advises to avoid creating useless DOM wrapper elements in a React context. Suggests some interesting solutions that I didn't know, like Radix `asChild`.
+- 📜 [Server-side render dates across timezones with Remix](https://www.jacobparis.com/guides/remix-ssr-dates): cookie-based solution to solve React hydration issues related to a different timezone between client and SSR.
+- 📜 [Framework popularity on Netlify](https://www.netlify.com/blog/framework-popularity-on-netlify/): stats on the use of many React frameworks at Netlify. Glad to see Docusaurus there!
+- 📜 [Generate open graph social preview images with Remix](https://www.jacobparis.com/guides/remix-og): as `@vercel/og` only runs on Vercel, this solution gives a similar result using Satori and svg2img.
+- 📜 [Why & How We Retired Elm at Culture Amp](https://kevinyank.com/posts/on-endings-why-how-we-retired-elm-at-culture-amp/): feedback on the choice to use Elm or React over time.
+- 📜 [The Most Common Mistakes When Using React](https://claritydev.net/blog/the-most-common-mistakes-when-using-react)
+- 📜 [Improving React Testing Library Tests](https://claritydev.net/blog/improving-react-testing-library-tests)
+- 📜 [NextJS - SPA or MPA?](https://www.code-insights.dev/posts/nextjs-spa-or-mpa)
+- 📦 [React Aria Components alpha](https://twitter.com/devongovett/status/1643988004577619971): to facilitate the use of React-Aria and other React-Aria + React-Spectrum updates.
+- 📦 [Astro 2.2](https://astro.build/blog/astro-220/): `assetPrefix` to use a CDN and changes on the `image()` helper for the collections schema.
+- 📦 [Next-Auth v4.22](https://twitter.com/nextauthjs/status/1645004172725551104): support Route Handlers support.
+- 📦 [next-seo v6](https://github.com/garmeeh/next-seo/releases/tag/v6.0.0): recommande d'utiliser les nouvelles API Next.js avec le App Router.
+- 📦 [Deno SaaS Kit](https://github.com/denoland/saaskit): official Deno boilerplate to create SaaS, based on Fresh and Preact.
+- 🎥 [Secret React Server Component Patterns They Don't Want You To Know](https://www.youtube.com/watch?v=ciQdQkT0bZk): interesting for those who want to know more about Wakuwork and its RSC capabilities not present in Next.js 13.
+- 🎥 [Why React breaks your app – on purpose](https://www.youtube.com/watch?v=1UOAI7pFDek): explains why React renders the app twice with Strict Mode.
+- 🎥 [React Server Components without NextJS - A 1 minute guide](https://twitter.com/BHolmesDev/status/1643990398824763393): great short RSC overview.
 
 <SubscribeFormEmbed />
 
@@ -72,6 +124,20 @@ Watch the [4-min demo video](https://www.youtube.com/watch?v=zRkeKSZjlyw)
 
 ## 📱 React-Native {#react-native}
 
+- 📜 [Managing environment variables securely in React Native](https://www.bam.tech/article/managing-environment-variables-securely-in-react-native)
+- 📜 [Expo - M1/M2 Migration Timeline for EAS Build](https://blog.expo.dev/m1-m2-migration-timeline-for-eas-build-22bd6c49f1b3)
+- 👀 [The New Architecture Performance Benchmarks](https://github.com/reactwg/react-native-new-architecture/discussions/123): the new architecture is just slightly faster than the old one on this synthetic benchmark. Note: performance is not the only reason to adopt the new architecture. Some performance issues fixed on v0.72.
+- 👀 [Soon: Environment Variables in Expo](https://twitter.com/Baconbrix/status/1644731840132169728)
+- 👀 [Expo-MDX supports global components](https://twitter.com/Baconbrix/status/1645477524606943248)
+- 📦 [React-Native 0.72.0-RC.1](https://github.com/facebook/react-native/releases/tag/v0.72.0-rc.1)
+- 📦 [react-native-keyboard-controller 1.5](https://twitter.com/ziusko/status/1645322969453932576): interactive keyboard, ability to dismiss the keyboard with a gesture.
+- 📦 [react-native-quick-sqlite](https://twitter.com/mrousavy/status/1643991438450114563): package now maintained by Margelo.
+- 🐦 ["Hermes recently surpassed JavaScriptCore as the most popular JavaScript engine in EAS Build!"](https://twitter.com/expo/status/1645540179724353536)
+- 🎥 [How to Create an Expo App with React-Native Firebase](https://www.youtube.com/watch?v=mZlKwRV4MC8)
+- 🎥 [freeCodeCamp React-Native Course](https://www.youtube.com/watch?v=obH0Po_RdWk)
+- 👥 [App.js](https://appjs.co/) (Krakow, May 10-12) is offering us [-20% on workshops](https://ti.to/appjs/2023/discount/ThisWeekinReact20) (code "ThisWeekinReact20").
+- 👥 [Chain React](https://chainreactconf.com/) (Portland, May 18-19) is offering us -10% on entries (code "thisweekinreact").
+
 ---
 
 ## 🧑‍💻 Jobs {#jobs}
@@ -94,24 +160,18 @@ We have several roles open for developers focused on React Native! Pay is ~160k 
 
 ## 🔀 Other {#other}
 
+- [JSPM CLI Relaunch](https://jspm.org/jspm-cli): package management betting on import maps.
+- [lazyrepo - Caching task runner for npm/pnpm/yarn monorepos](https://github.com/ds300/lazyrepo)
+- [AWS Lambda introduces response payload streaming](https://aws.amazon.com/fr/about-aws/whats-new/2023/04/aws-lambda-response-payload-streaming/)
+- [Vercel - Improved Node.js compatibility for Edge Middleware and Edge Functions](https://vercel.com/changelog/improved-node-js-compatibility-for-edge-middleware-and-edge-functions)
+- [W3C - First public draft - Badging API](https://www.w3.org/blog/news/archives/9878)
+- [Node.js 19.9](https://nodejs.org/en/blog/release/v19.9.0)
+- [Vitest 0.30](https://twitter.com/sheremet_va/status/1645063635712999427)
+
 ---
 
 ## 🤭 Fun {#fun}
 
-https://twitter.com/galstar/status/1645638031473254400
-
-https://twitter.com/GabrielVergnaud/status/1645005803131138049
-
-https://twitter.com/trashh_dev/status/1644162037097066496
-
-https://twitter.com/CherryJimbo/status/1643778121944952833
-
-https://twitter.com/sebastienlorber/status/1645823352693506048
-
-https://twitter.com/RozenMD/status/1643918966165848065
-
-https://twitter.com/aarondjents/status/1645805840295919618
-
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![React was a mistake](/emails/issues/141/meme.jpg)](https://twitter.com/sebastienlorber/status/1645823352693506048)
 
 See ya! 👋
