--- a/website/newsletter/143/index.mdx
+++ b/website/newsletter/143/index.mdx
@@ -33,7 +33,7 @@ Are you currently building an admin panel with React? If so, we have some exciti
 
 With React-admin you can not only save valuable time, but you can also become a better developer! You don't have to take only our word for it, though. There are already over 20,000 developers who use it daily and swear by its effectiveness. And if you're curious about the experiences of developers who have used React-admin for years already, check out NPO [Caritas' testimonial](https://marmelab.com/blog/2022/07/07/react-admin-caritas.html).
 
-Join our thriving community as well as [Discord](https://discord.com/invite/wt3HC9eN) server, so you can stay up-to-date on the latest React-admin updates and get support from a network of experienced developers.
+Join our thriving community as well as [Discord](https://discord.com/invite/jR3D6SdQ) server, so you can stay up-to-date on the latest React-admin updates and get support from a network of experienced developers.
 
 So what are you waiting for? Start using React-admin now, it’s free 😉, and take your development to the next level! 🚀
 
